[project]
name = "2025swhackerthon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-naver>=0.1.1",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
